loki/ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: basicauth
spec:
  basicAuth:
    secret: htaccess
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: basicauthremove
spec:
  basicAuth:
    removeHeader: true
    secret: htaccess
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
spec:
  entryPoints:
    - http
    - https
  routes:
  - match: HostRegexp(`loki.{domain:.+}`)
    kind: Rule
    middlewares:
    - name: basicauth
    services:
    - name: loki
      port: 3100
